 $Id: ChangeLog,v 1.28 2004/12/19 14:49:00 mkern Exp $

2004-12-19  Markus Kern <mkern@users.berlios.de>

	* Fixed unchecked FST_PLUGIN->session access in fst_download.c
	* Fixed url decoder memmove overrun.

2004-11-27  Markus Kern <mkern@users.berlios.de>

	* Added windows installer.

2004-11-11  Markus Kern <mkern@users.berlios.de>

	* Finalized multi-supernode connection code.
	* Fixed NULL pointer crash on some corrupt search results.

2004-09-03  Markus Kern <mkern@users.berlios.de>

	* Fixed abuse of gethostbyname in HTTP client.

2004-06-19  Markus Kern <mkern@users.berlios.de>
	
	* Fixed remote DoS on HTTP server (not exploitable).
	* Fixed remote DoS on HTTP client (not exploitable).

2004-06-16  HEx <hex@users.berlios.de>

	* Use default nodes file if cache runs out of nodes.

2004-03-20  Markus Kern <mkern@users.berlios.de>

	* Added auto_search_more config option.
	* Tweaked supernode discovery.
	* Fixed shares upload limiting.

2004-03-11  Markus Kern <mkern@users.berlios.de>

	* Periodically ping supernode and disconnect after timeout.

2004-03-09  Markus Kern <mkern@users.berlios.de>

	* New url format.
	* Remove firewalled sources if our supernode changed.

2004-03-08  Markus Kern <mkern@users.berlios.de>

	* More UDP tweaks
	* Reply to protocol version notify.

2004-03-07  Markus Kern <mkern@users.berlios.de>

	* Added new kzhash. Calculated for shares and used for verification of
	  downloads if provided by the front end.

2004-03-03  Markus Kern <mkern@users.berlios.de>

	* Calculate availability based on reported bandwidth.
	* Let gift-setup handle the config file.
	* Check for invalid whitespaces in usernames.

2004-03-02  Markus Kern <mkern@users.berlios.de>

	* Don't sort out index nodes when saving node list.
	* Limit number of shared files so supernodes don't reject us.

2004-02-29  Markus Kern <mkern@users.berlios.de>

	* Rewrote UDP supernode discovery to work in parallel with TCP

2004-01-16  Markus Kern <mkern@users.berlios.de>
